videos derivs: produce posters and better playback

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -136,6 +136,7 @@ RSpec/MessageSpies:
     - 'spec/jobs/characterize_job_spec.rb'
     - 'spec/jobs/create_derivatives_job_spec.rb'
     - 'spec/jobs/curation_concern_update_index_job_spec.rb'
+    - 'spec/hydra-derivatives/processors/video_spec.rb'
     - 'spec/jobs/hyrax/grant_read_to_members_job_spec.rb'
     - 'spec/jobs/hyrax/revoke_edit_from_members_job_spec.rb'
     - 'spec/jobs/hyrax/grant_edit_to_members_job_spec.rb'
@@ -146,6 +147,7 @@ RSpec/MessageSpies:
 
 RSpec/SubjectStub:
   Exclude:
+    - 'spec/hydra-derivatives/processors/video_spec.rb'
     - 'spec/models/riiif/file_spec.rb'
 
 Style/CommentedKeyword:
