--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -32,6 +32,7 @@ handle_service:
   url: https://hdl.handle.net/api/handles
   user: admin
   password: secret
+  ssl_verify: false
 
 # List of Greensub Products to allow read access to everyone.
 allow_read_products:
