HELIO-3430 - fixes for tests, modify ruumba for metrics on nesting

--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -61,6 +61,9 @@ Lint/Void:
 
 Metrics/BlockLength:
   Enabled: false
+Metrics/BlockNesting:
+  Exclude:
+    - 'app/views/monograph_catalog/_index_monograph.html.erb.rb'
 Metrics/LineLength:
   Enabled: false
 
