HELIO-3347 Indicate access levels on Publisher page HELIO-3346 Indicate access level on Monograph page HELIO-3520 Icons and Legend for Access Levels

--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -33,3 +33,7 @@ handle_service:
   user: admin
   password: secret
   ssl_verify: false
+
+# List of Greensub Products to allow read access to everyone.
+allow_read_products:
+  - allow_read_product
