bundle exec rails webpacker:install and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,10 @@ lib/doc
 
 # Ignore LibreOffice lock files
 .~lock*
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
