--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
 dist: xenial
 language: ruby
-cache: bundler
+cache:
+  bundler: true
+  yarn: true
+  directories:
+    - node_modules
 sudo: required
 bundler_args: --without production
 before_install:
   - gem update --system
   - gem install bundler --pre
+  - nvm install node
+  - npm install --global yarn
+install:
+  - bundle install --jobs=3 --retry=3
+  - yarn install --frozen-lock
 before_script:
   - bin/bundle exec bin/travis
+script:
+  - rake ci
 rvm:
   - 2.5.8
 jdk:
