--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -100,6 +100,7 @@ RSpec/ContextWording:
 RSpec/DescribeClass:
   Exclude:
     - 'spec/features/**/*'
+    - 'spec/requests/**/*'
     - 'spec/routing/**/*'
     - 'spec/views/**/*'
     - 'lib/spec/integrations/**/*'
