--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - bundle install --jobs=3 --retry=3
   - yarn install --frozen-lock
 before_script:
-  - bin/bundle exec bin/travis
+  - bin/bundle exec bin/setup_ci
 script:
   - rake ci
 rvm:
