--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,17 @@ install:
   - bundle install --jobs=3 --retry=3
   - yarn install --frozen-lock
 before_script:
-  - bin/bundle exec bin/travis
+  - bin/bundle exec bin/setup_ci
 script:
   - rake ci
 rvm:
   - 2.5.8
+# this temporarily disables travis without "turning it off"
+# via github/travis permanently. For details HELIO-3650.
+# matrix:
+#  exlude:
+#    rvm: '2.5.8'
+# end disable
 jdk:
   - openjdk8
 addons:
