--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: required
 bundler_args: --without production
 before_install:
   - gem update --system
-  - gem install bundler --pre
+  - gem install -v 2.1.4 bundler
   - nvm install node
   - npm install --global yarn
 install:
