--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -37,3 +37,8 @@ handle_service:
 # List of Greensub Products to allow read access to everyone.
 allow_read_products:
   - allow_read_product
+
+# hopefully temporary, see HELIO-3678
+bar_disallow_chapter_downloads_list:
+  - sample_bar_number_1
+  - sample_bar_number_2
