HELIO-3701 Send usage report emails to OAeBU Data Trust

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -34,6 +34,12 @@ handle_service:
   password: secret
   ssl_verify: false
 
+open_access_ebook_trust_emails:
+  to: test@fulcrum
+  cc:
+    - cc1@fulcrum
+    - cc2@fulcrum
+
 # List of Greensub Products to allow read access to everyone.
 allow_read_products:
   - allow_read_product
