--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.2.1",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
     "cozy-sun-bear": "git+https://github.com/mlibrary/cozy-sun-bear.git",
-    "cozy-sun-bear-too": "git+https://github.com/mlibrary/cozy-sun-bear.git#too"
+    "cozy-sun-bear-too": "git+https://github.com/mlibrary/cozy-sun-bear.git#too",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
