HELIO-3888 Log and Measure epub searches

--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -41,6 +41,9 @@ Layout/IndentationWidth:
   Enabled: false
 Layout/InitialIndentation:
   Enabled: false
+Layout/LeadingBlankLines:
+  Exclude:
+    - 'app/views/epub_search_logs/index.html.erb.rb'
 Layout/LeadingCommentSpace:
   Enabled: false
 Layout/MultilineMethodCallBraceLayout:
