adjust for tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -48,6 +48,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/*'
+    - 'app/views/shared/_brand_press_bar_custom.html.erb'
 
 Metrics/ClassLength:
   Description: 'Avoid classes longer than 250 lines of code'
