adjust ruumba block level nesting

--- a/ruumba/.ruumba.yml
+++ b/ruumba/.ruumba.yml
@@ -69,6 +69,7 @@ Metrics/BlockNesting:
     - 'app/views/catalog/_facets.html.erb.rb'
     - 'app/views/monograph_catalog/_index_monograph.html.erb.rb'
     - 'app/views/shared/_altmetric_dimensions.html.erb.rb'
+    - 'app/views/shared/_brand_press_bar_custom.html.erb.rb'
 Metrics/LineLength:
   Enabled: false
 
