--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ addons:
   apt:
     packages:
       - dpkg # fix for travis issue https://github.com/travis-ci/travis-ci/issues/9361
+      - pdftk
       - qpdf
   chrome: stable
 services:
