HELIO-3958: Institution containing dlps_institution_id

--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -40,6 +40,6 @@ open_access_ebook_trust_emails:
     - cc1@fulcrum
     - cc2@fulcrum
 
-world_institution_identifier: 0
+world_institution_identifier: 0 # TODO: Prefix with '#'
 
 princesse_de_cleves_noid: pdecleves
