--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,18 @@
-require: rubocop-rspec
+require:
+  - rubocop-rails
+  - rubocop-rspec
+
 inherit_gem:
   rubocop-rails_config:
     - config/rails.yml
+
 inherit_from: .rubocop_todo.yml
 
 AllCops:
   NewCops: enable
   DisplayCopNames: true
+  TargetRubyVersion: 2.7.4
+  TargetRailsVersion: 5.2.4.6
   Include:
     - '**/*.rb'
     - '**/Rakefile'
@@ -59,7 +65,6 @@ Metrics/ClassLength:
   Enabled: true
   Max: 250
 
-
 Metrics/MethodLength:
   Enabled: false
 
@@ -76,6 +81,10 @@ Rails:
 
 Rails/Delegate:
   Enabled: false
+
+Rails/FilePath:
+  #  EnforcedStyle: slashes
+  EnforcedStyle: arguments
 
 Rails/LexicallyScopedActionFilter:
   Enabled: false
@@ -120,9 +129,6 @@ RSpec/ExampleWording:
     NOT: does NOT
   IgnoredWords:
     - only
-
-RSpec/FilePath:
-  Enabled: false
 
 RSpec/InstanceVariable:
   Enabled: false
