--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "5.4.2",
     "cozy-sun-bear": "git+https://github.com/mlibrary/cozy-sun-bear.git",
-    "cozy-sun-bear-too": "git+https://github.com/mlibrary/cozy-sun-bear.git#too",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1"
+    "cozy-sun-bear-too": "git+https://github.com/mlibrary/cozy-sun-bear.git#too"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
-  },
-  "optionalDependencies": {
-    "xml-js": "^1.6.11"
   }
 }
