HELIO-4285 search for princesse_de_cleves

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -42,4 +42,4 @@ open_access_ebook_trust_emails:
 
 world_institution_identifier: 0
 
-princesse_de_cleves_noid: zk51vg78w
+princesse_de_cleves_noid: z890rt24s
